# tinkerforge_imu_ros

./: CMakeLists.txt  README.md  install.sh  package.xml
include/: brick_imu_v2.h
launch/: bricks_v2.launch
src/: brick_imu_v2.cpp  ip_connection.cpp  tinkerforge_imu_ros.cpp
